# practice

./: MA.py  MA2.py  basic.py  dict_None_functions_2.py  for_loop.py  function.py  if_boolean.py  lists.py  main.py  pyproject.toml  scopes_namespaces.py  weather.py
