[tool.poetry]
name = "practice"
version = "0.1.0"
description = "weather app"
authors = ["melad <meladzeruslan164@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
